objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AD_Invite__c</fullName>
        <label>AD Invite</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AE_Business_Unit__c</fullName>
        <label>AE Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TIP AE</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR ((2 OR 4) AND 3)</booleanFilter>
            <errorMessage>AE associated to this Contact is inactive. Please activate AE record before updating the Contact Record.</errorMessage>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Integration</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>ContactsAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AM_Invite__c</fullName>
        <label>AM Invite</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accomplishments__c</fullName>
        <label>Accomplishments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Admin__c</fullName>
        <label>Account Admin</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_CDN__c</fullName>
        <label>Account CDN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_City__c</fullName>
        <label>Account City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Country__c</fullName>
        <label>Account Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Division_Kanji__c</fullName>
        <label>Account Division Kanji</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Division__c</fullName>
        <label>Account Division</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Kanji_CDN__c</fullName>
        <label>Account Kanji CDN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Location__c</fullName>
        <label>Account Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Postal_Code__c</fullName>
        <label>Account Postal Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_State__c</fullName>
        <label>Account State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Street_Address__c</fullName>
        <label>Account Street Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Survey_Type__c</fullName>
        <label>Account Survey Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Validation_Email_Identifier__c</fullName>
        <externalId>true</externalId>
        <label>Account Validation Email Identifier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Status__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_User_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active User Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_To_Group__c</fullName>
        <label>Add To Group</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Cutomer_Name__c</fullName>
        <label>Additional Cutomer Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_3__c</fullName>
        <label>Address 3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_4__c</fullName>
        <label>Address 4</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Change_Password_Date__c</fullName>
        <description>This Field is using when admin changed the password for the end user</description>
        <label>Admin Change Password Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Advanced_Support_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advanced Support Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advanced_Support_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Advanced Support Group</label>
        <referenceTo>Advanced_Support_Groups__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agenda__c</fullName>
        <label>Agenda</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agreed_to_Community_Guidelines__c</fullName>
        <defaultValue>false</defaultValue>
        <description>agree to Community Guidelines.</description>
        <label>Agreed to Community Guidelines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alias__c</fullName>
        <label>Alias</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alignment__c</fullName>
        <label>Alignment</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alternate_Email_Address__c</fullName>
        <label>Alternate Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alternate_Phone__c</fullName>
        <label>Alternate Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Apex_Context2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bypassing old data using this field // Ramu PB</description>
        <label>Apex Context</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>App_Code__c</fullName>
        <label>App Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Name__c</fullName>
        <formula>IF(App_Code__c==&apos;cos&apos;, $Label.COS_App_Name , 
IF(App_Code__c==&apos;lms&apos;, $Label.LMS_App_Name , 
IF(OR(App_Code__c==&apos;cdotcom&apos;,App_Code__c==&apos;legacycdn&apos;), $Label.Cadence_App_Name , 
IF(App_Code__c==&apos;eot&apos;, $Label.EDTAP_App_Name , &apos;&apos;) ) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Authority__c</fullName>
        <label>Approval Authority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ask_later_tech_preferences__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ask later tech preferences</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignment_Excluded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assignment Excluded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assistant_Email__c</fullName>
        <label>Assistant Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asst_Email_Address__c</fullName>
        <label>Asst. Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKUrgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Urgency</label>
        <referenceTo>BMCServiceDesk__Urgency__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BU_Platform__c</fullName>
        <label>BU Platform</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BU_Technology__c</fullName>
        <label>BU Technology</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Batch_Operation_Result__c</fullName>
        <label>Batch Operation Result</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <label>Building</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_Load_Id__c</fullName>
        <label>Bulk Load Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Function__c</fullName>
        <label>Business Function</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Results__c</fullName>
        <label>Business Results</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDOTCOM_Admin_Approval_Date__c</fullName>
        <label>CDOTCOM Admin Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CDOTCOM_Approved_By__c</fullName>
        <label>CDOTCOM Approved By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS_Acceptance_Date__c</fullName>
        <description>Field for capturing the date and time of Terms Of Use acceptance for COS Application</description>
        <label>COS Acceptance Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>COS_Admin_Approval_Date__c</fullName>
        <label>COS Admin Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>COS_Approved_By__c</fullName>
        <label>COS Approved By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS_Case_Group_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COS Case Group Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COS_Entitlement__c</fullName>
        <description>To control Cos top menu entitlement</description>
        <label>COS Entitlement</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS_HostId_Users__c</fullName>
        <formula>Sourcelink_ID__c &lt;&gt; &apos;&apos; &amp;&amp; Entitlement_Count__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COS HostId Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COS_LOS_Admins__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COS LOS Admins</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COS_LOS_Users__c</fullName>
        <formula>Sourcelink_ID__c &lt;&gt; &apos;&apos; &amp;&amp; Reference_Key__c &lt;&gt; &apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COS LOS Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COS_Login_Count__c</fullName>
        <description>Store successfull login counts for COS</description>
        <label>COS Login Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COS_Registration_Date__c</fullName>
        <description>Interface stores COS Registration Date</description>
        <inlineHelpText>COS Registration Date</inlineHelpText>
        <label>COS Registration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>COS_Univ_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COS Univ Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSN__c</fullName>
        <label>CSN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSSO_UUID__c</fullName>
        <label>CSSO UUID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cadence_Registration_Date__c</fullName>
        <label>Cadence Registration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cadence_com_Registered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cadence.com Registered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Assignment</label>
        <referenceTo>Case_Assignment__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Team__c</fullName>
        <label>Case Team</label>
        <picklist>
            <picklistValues>
                <fullName>ADI HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baseband Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ConnX BBE Programming Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debi_TIP_Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Galileo Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hareesh Kesavan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Huawei Balong Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Huawei Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDT Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel MT Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel US Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel WW Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IVP Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korea Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LSP team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metanoia team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miguel Chin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NXP Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patriot Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paul Korolov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pune + Cruise Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pune Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEST_COS2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIP UAT Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TKK Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ubiqomm Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undo-to be deleted</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cellular_Phone__c</fullName>
        <label>Cellular Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ChallengeAnswer__c</fullName>
        <label>ChallengeAnswer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChallengeQuestion__c</fullName>
        <label>ChallengeQuestion</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Login_Initiated_By__c</fullName>
        <label>Change Login Initiated By</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coach__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Coach</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Alias__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Alias</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Company Alias)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Address_Same_As_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Address Same As Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Country__c</fullName>
        <label>Contact Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Event__c</fullName>
        <label>Contact Event</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Login_Status__c</fullName>
        <formula>IF( !ISBLANK(TIP_Project_End_Date__c) , TEXT(Status__c)&amp; &quot; (&quot;&amp;TEXT(MONTH(TIP_Project_End_Date__c))&amp;&quot;/&quot;&amp; TEXT(DAY(TIP_Project_End_Date__c))&amp;&quot;/&quot;&amp; TEXT(YEAR(TIP_Project_End_Date__c))&amp;&quot;)&quot;, TEXT(Status__c))</formula>
        <label>Contact Login Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <displayFormat>C-{000000}</displayFormat>
        <label>Contact Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <label>Contact Role</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Routing_Preference__c</fullName>
        <label>Contact Routing Preference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contacted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contacted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Content_Language__c</fullName>
        <label>Content Language</label>
        <picklist>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese and English</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County/Sub Locality</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBE_Expiration_Date__c</fullName>
        <inlineHelpText>When a user account has a Domain Expiration Date, it means that the email address supplied by the user does not match one of the known corporate email domains for the Parent Account.</inlineHelpText>
        <label>Domain Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DBE_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DBE Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DNB_Parent_DUNS__c</fullName>
        <label>DNB Parent DUNS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DUNS_Number__c</fullName>
        <label>DUNS Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <label>Data Source</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Entered_Household__c</fullName>
        <label>Date Entered Household</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Exited_Household__c</fullName>
        <label>Date Exited Household</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DeQualified_By__c</fullName>
        <label>DeQualified By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeQualified_On__c</fullName>
        <label>DeQualified On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Decision_Orientation__c</fullName>
        <label>Decision Orientation</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deduplication_Match_Score__c</fullName>
        <label>Deduplication Match Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>Account.Address_2__c</formula>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dock_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dock Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDAon_Tap_Customer_Not_Found__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EDAon Tap Customer Not Found</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESP_Decision_Orientation__c</fullName>
        <label>ESP Decision Orientation</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ESP_Org_Status__c</fullName>
        <label>ESP Org Status</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ESP_Political_Analysis__c</fullName>
        <label>ESP Political Analysis</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ESP_Role__c</fullName>
        <label>ESP Role</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ESP_Time_Spent__c</fullName>
        <label>ESP Time Spent</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Economic_Buyer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Economic Buyer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Educational_Background__c</fullName>
        <label>Educational Background</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email2__c</fullName>
        <description>created by martha to test dups</description>
        <label>Email2</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Email_Cos_Id_Mismatch__c</fullName>
        <formula>IF( Sourcelink_ID__c = null ,&apos;false&apos;,IF((( UPPER(Email) &lt;&gt; UPPER( Sourcelink_ID__c)) &amp;&amp; (UPPER(Email) &lt;&gt; UPPER(Sourcelink_ID__c)+&apos;@CADENCE.COM&apos;) ) ,&apos;true&apos;, &apos;false&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Cos Id Mismatch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Identifier_Key__c</fullName>
        <label>Email Identifier Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Resent_Date__c</fullName>
        <label>Email Resent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_SR_Updates_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email SR Updates Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employee Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <description>External Id in reference with User</description>
        <label>Employee Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encrypted_Okta_Secret_Answer__c</fullName>
        <label>Encrypted Okta Secret Answer</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Entitlement_Count__c</fullName>
        <label>Entitlement Count</label>
        <summaryForeignKey>EntitlementContact.ContactId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Entitlement_Product_Features__c</fullName>
        <formula>HYPERLINK(&quot;/apex/EntitlementProductFeatures_VP?contactId=&quot;&amp; Id , &quot;Click to see Product Features&quot; , &quot;_blank&quot;)</formula>
        <label>Entitlement Product Features</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evidence_to_support_rating__c</fullName>
        <label>Evidence to support rating</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expertise__c</fullName>
        <label>Expertise</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <label>Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FAE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TIP FAE</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR ((2 OR 4) AND 3)</booleanFilter>
            <errorMessage>FAE associated to this Contact is inactive. Please activate FAE record before updating the Contact Record.</errorMessage>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Integration</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>ContactsFAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Favorite_Vendor__c</fullName>
        <label>Favorite Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Name_Kanji__c</fullName>
        <label>First Name Kanji</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_Parent_Account_Name__c</fullName>
        <label>GS Parent Account Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <picklist>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Global_Ultimate_DUNS__c</fullName>
        <label>Global Ultimate DUNS</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grace_End_Date__c</fullName>
        <description>Cos2.O</description>
        <label>Grace End Date</label>
        <type>Date</type>
    </fields>
</CustomObject>